Fix improper phi elimination in global value numbering (bug 714727, r=jandem).